# django-sample-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.config/: .env.template
src/: manage.py
src/application/: asgi.py  models.py  settings.py  urls.py  wsgi.py
src/application/conf/: auth.py  db.py  installed_apps.py  media.py  static.py  templates.py
src/apps/advert/: admin.py  models.py  urls.py  views.py
src/apps/advert/migrations/: 0001_initial.py
src/apps/advert/serializers/: response.py
src/apps/category/: admin.py  models.py
src/apps/category/migrations/: 0001_initial.py  0002_alter_category_name.py
src/apps/city/: admin.py  models.py
src/apps/city/migrations/: 0001_initial.py  0002_alter_city_name.py
